# plapreCPU

./: README.md  pyproject.toml
plapre/: inference.py  server.py
