[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plapre-cpu"
version = "0.1.0"
description = "Danish text-to-speech synthesis (CPU-only)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "torch",
    "torchaudio",
    "transformers",
    "llama-cpp-python",
    "soundfile",
    "numpy",
    "num2words",
    "huggingface-hub",
    "kanade-tokenizer @ git+https://github.com/frothywater/kanade-tokenizer",
]

[project.optional-dependencies]
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9"]

[project.scripts]
plapre-cpu-serve = "plapre.server:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["plapre"]
